--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -262,8 +262,8 @@
 	</fx:Script>
 	<s:Scroller width="{this.width}" height="{this.height}">
 	<s:HGroup>
-		<s:VGroup height="{300}">
-			<s:List itemRenderer="net.vdombox.object_editor.view.AttributesListRenderer"  id="attributesList" height="{height- 50}" width="100%" dragMoveEnabled="true" dragEnabled="true" dropEnabled="true" change="this.currentAttribute=List(event.target).selectedItem"/>
+		<s:VGroup height="{300}" toolTip="You can drag and drop attributes" color="white">
+			<s:List  itemRenderer="net.vdombox.object_editor.view.AttributesListRenderer"  id="attributesList" height="{height- 50}" width="100%" dragMoveEnabled="true" dragEnabled="true" dropEnabled="true" change="this.currentAttribute=List(event.target).selectedItem"/>
 			<s:HGroup>
 				<s:Button id="addAttributeButton" label="Add"/>
 				<s:Button id="deleteAttributeButton" label="Delete" enabled="{attributesList.selectedIndex != -1}"/>
