git-svn-id: http://svn.vdombox.ru/flextools/trunk@6613 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/src/ObjectEditor2.mxml
@@ -4,11 +4,13 @@
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:ns="net.vdombox.object_editor.view.essence.*"
 					   xmlns:vs="net.vdombox.object_editor.view.*" 
-					   minWidth="900" minHeight="600" xmlns:local="*"
+					   xmlns:local="*"
 					   xmlns:containers="flexlib.containers.*"
+
 					   
 					   preinitialize="init();"
 					   creationComplete="facade.startup(this)">
+
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects)  -->
 	</fx:Declarations>
