--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/AttributesListRenderer.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/AttributesListRenderer.mxml
@@ -18,11 +18,11 @@
 				// TODO: Auto-generated method stub
 				switch (data.color)
 				{
-					case 0:
+					/*case 0:
 					{
 						backColor = 0xEE9511;
 						break;
-					}
+					}*/
 					case 1:
 					{
 						backColor = 0x8289A3;
@@ -61,7 +61,7 @@
 	<s:Group doubleClickEnabled="true" width="100%" height="100%" >
 		<s:Rect width="100%" height="100%" >
 			<s:fill>
-				<s:SolidColor id="bsc" color.normal="{backColor}"  color.hovered="blue" color.selected="blue" />
+				<s:SolidColor id="bsc" color.normal="{backColor}"  color.hovered="blue" color.selected="{backColor}"/>
 			</s:fill>			
 		</s:Rect>			
 		<s:Label id="txt" text="{data.label}" fontSize.selected="20" color="#DDD6D5"/>		
