--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ListItemRenderer.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ListItemRenderer.mxml
@@ -27,7 +27,7 @@
 				
 				image.source = decoder.toByteArray();
 				image.visible = true;
-				data.img = "";
+//				data.img = "";
 			}
 		]]>
 	</fx:Script>
